fix some goofy spacing issues

--- a/src/pages/MainPage.css
+++ b/src/pages/MainPage.css
@@ -62,6 +62,8 @@
 
     background-color: rgba(0, 0, 0, 0.5);
 
+    align-self: center;
+
     font-size: 8.45vh;
 }
 
@@ -79,6 +81,8 @@
 
 .prediction {
     justify-content: center;
+
+    align-items: center;
 }
 
 .bar-wrapper {
@@ -115,6 +119,7 @@
     padding-right: 1vw;
     padding-left: 1vw;
 
+    align-content: center;
     border-radius: var(--standard-border-radius);
 }
 
